added : createChat, findUsersToChat apis
